Deploy binary made with graalvm native-image